--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ h4 {
 }
 
 p {
-  line-height: 1.4;
+  line-height: 1.6;
   font-size: 16px;
   color: var(--text-color);
   text-align: justify;
@@ -107,4 +107,8 @@ li {
   width: 30%;
   min-width: 200px;
   border-color: rgba(68,68,68,.4);
+}
+
+footer ul li {
+  font-size: 12px;
 }
