--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
   margin-right: auto;
   background-color: white;
   box-sizing: border-box;
+  font-family: 'Lora', serif;
 }
 
 /* ----------------
@@ -66,8 +67,13 @@ ul {
   Major Styles
   ----------------*/
 header {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
   background-color: var(--text-color);
   padding-top: 15px;
+  height: 80px;
 }
 
 header,
@@ -128,7 +134,9 @@ img {
   ----------------*/
 
 .section-wrapper {
+  margin-top: 95px;
   max-width: 100%;
+  padding-top: 10px;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -165,4 +173,39 @@ footer ul li {
 footer ul li a {
   color: #ec4431;
   text-decoration: none;
+}
+
+@media screen and (min-width: 600px) {
+  h4 {
+    font-size: 16px;
+  }
+
+  p,
+  .list-bulletless {
+    font-size: 20px;
+    max-width: 700px;
+    line-height: 1.5;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .section-wrapper {
+    padding-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  footer {
+    padding-top: 25px;
+    padding-bottom: 5px;
+  }
+
+  footer h5 {
+    font-size: 14px;
+  }
+
+  footer ul li {
+    font-size: 14px;
+  }
+
 }
